--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project Description  \r Features  \r Technologies Used  \r Challenges  \r Contributing  \r License  \r Contact  \r # Project Description\r The Cryptocurrency Portfolio Tracker is a web application that allows users to monitor and manage their cryptocurrency investments. With real-time data integration, users can track the performance of their portfolios, visualize trends, and make informed decisions. The platform is built using modern web technologies including React for the frontend, Node.js for the backend, and MongoDB as the database.",
   "main": "index.js",
   "scripts": {
-    "start:frontend": "react-scripts start",
+    "start:tracker": "react-scripts start",
     "start:backend": "node backend/server.js"
   },
   "keywords": [],
